# nu

./: .Xresources  .asoundrc  .emacs.el  .gitmodules  .xinitrc  .xmobarrc  CMakeLists.txt  diary
.contexts/Haskell/: http:⁄⁄learnyouahaskell.com⁄functors-applicative-functors-and-monoids
.contexts/OpenGL_Bible/: book
.contexts/Puurbliss/: puurbliss.nl
.emacs.d/: calendar.el  cedet.el  circe.el  cpp.el  haskell.el  helm.el  hooks.el  jabber.el  latex.el  misc.el  org.el  python-ide.el  scheme.el
.icons/: bat_full_01.xbm  spkr_00.xbm  spkr_01.xbm  spkr_02.xbm  spkr_03.xbm  spkr_mm.xbm  stop.xbm  wifi_02_s00.xbm  wifi_02_s01.xbm  wifi_02_s02.xbm  wifi_02_s03.xbm  wifi_02_s04.xbm  wifi_03_s00.xbm  wifi_03_s01.xbm  wifi_03_s02.xbm  wifi_03_s03.xbm  wifi_03_s04.xbm  wifi_no.xbm
.irssi/: config
.tags/: cg
.tags/graphics/: OpenGL
.tags/math/: Mathematics  Maths  ^phys
.tags/phys/: ^math
.xmonad/: xmonad.hs
Projects/Haskell/grid-animated/: .gitignore  ChangeLog.md  README.md  grid-animated.cabal  package.yaml  run.sh  stack.yaml
Projects/Haskell/grid-animated/app/: Main.hs  scratch
Projects/Parser/: PGeoParserAeson.hs  TuplesPGeoParserAeson.hs  geoParser.py  model.pgeo  tuples.pgeo
Projects/agda/study/: README  (+1 more)
Projects/pvr/: CMakeLists.txt
etc/portage/: make.conf  package.license  package.unmask
houdini17.4/: .idialog  Default_Theme_theme.nodeshapes  Houdini.keymap.overrides  dir.history  file.history  hcommon.pref  houdini.pref  networkeditor.pref  ui.pref  wingeo.pref
houdini17.4/asset_store/: installed_assets.json
houdini17.4/desktop/: MKV.desk  MKV_Day.desk  MKV_VOPs.desk  Substance.desk
houdini17.4/toolbar/: default.shelf
org/: index.org
src/book/: Main.cpp
src/my_first_point/: Main.cpp
(+195 files in other folders)
