name:           grid-animated
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/madjestic/grid-animated#readme>
homepage:       https://github.com/madjestic/grid-animated#readme
bug-reports:    https://github.com/madjestic/grid-animated/issues
author:         Vladimir Lopatin
maintainer:     madjestic13@gmail.com
copyright:      Vladimir Lopatin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/madjestic/grid-animated

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
    , bytestring >= 0.10.8.1
    , OpenGL >= 3.0 && < 4
  exposed-modules:
      LoadShaders
  other-modules:
      Paths_grid_animated
  default-language: Haskell2010

executable grid-animated-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      GLFW-b
    , GLUtil >= 0.9.3
    , OpenGL >= 3.0 && < 4
    , transformers >= 0.5.2.0
    , random >= 1.1      
    , base >=4.7 && <5
    , grid-animated
  other-modules:
      Paths_grid_animated
  default-language: Haskell2010

test-suite grid-animated-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , transformers >= 0.5.2.0
    , random >= 1.1
    , grid-animated
  other-modules:
      Paths_grid_animated
  default-language: Haskell2010
